--- a/style.css
+++ b/style.css
@@ -29,12 +29,19 @@ body {
 }
 
 #center {
-    height: auto;
-    position: relative;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     width: 100%;
+    margin-right: auto;
+}
+
+#bottom {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+    margin-right: auto;
 }
 
 #characters {
@@ -66,7 +73,6 @@ body {
 #characterPortrait {
     position: relative;
     display: flex;
-    align-items: center;
     justify-content: left;
 }
 
@@ -91,7 +97,8 @@ body {
 
 .portrait {
     display: flex;
-    align-items: center;
     justify-content: left;
-    width: 100%;
+    max-height: 440px;
+    height: 100%;
+    width: auto;
 }
