--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 #statCalculator {
     position: relative;
     display: grid;
-    grid-template-rows: [row1-start] 50px [row1-end] auto [third-line] auto [last-line];
+    grid-template-rows: [row1-start] 10vh [row1-end] auto [third-line] 30vh [last-line];
     height: 100vh;
     grid-template-areas:
     'top'
@@ -28,14 +28,12 @@ body {
 }
 
 #center {
-    grid-column: 1 / span 6;
     grid-row: 2;
     display: grid;
-    max-height: 304px;
     width: 100%;
     margin-right: auto;
     grid-area: middle;
-    grid-template-columns: [first] 15% [line2] 15% [line3] 15% [line4] auto [col5-start] 20% [end];
+    /*grid-template-columns: [first] 15% [line2] 15% [line3] 15% [line4] auto [col5-start] 20% [end]; */
 }
 
 #bottom {
@@ -71,7 +69,6 @@ body {
 
 #characterPortrait {
     display: flex;
-    gap: 10px;
     padding-right: 10px;
     padding-left: 10px;
     max-width: 760px;
@@ -80,10 +77,7 @@ body {
 }
 
 #equipment {
-    display: grid;
-    align-items: end;
     padding-right: 10px;
-    padding-left: 10px;
     justify-self: flex-end;
     grid-column: 5;
     height: auto;
@@ -98,6 +92,16 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+}
+
+#class {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-left: 10px;
+    padding-top: 5px;
+    width: 70px;
+    height: auto;
 }
 
 .icon {
@@ -158,6 +162,18 @@ body {
 }
 
 .accessory img {
+    width: 100%;
+    height: auto;
+}
+
+.classIcon {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    height: auto;
+}
+
+.classIcon img {
     width: 100%;
     height: auto;
 }
