--- a/style.css
+++ b/style.css
@@ -13,27 +13,30 @@ body {
 
 #statCalculator {
     position: relative;
-    display: grid;
-    grid-template-rows: [row1-start] 10vh [row1-end] auto [third-line] 30vh [last-line];
+    display: flex;
+    flex-direction: column;
+    /* grid-template-rows: [row1-start] 10vh [row1-end] auto [third-line] 30vh [last-line]; */
     height: 100vh;
-    grid-template-areas:
+    /* grid-template-areas:
     'top'
     'middle'
-    'bottom';
+    'bottom'; */
 }
 
 #party {
     display: grid;
     grid-template-columns: [first] 54% [line2] 46% [end];
-    grid-area: top;
     align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #center {
-    display: grid;
+    display: flex;
+    flex-direction: row;
+    height: auto;
     width: 100%;
     margin-right: auto;
-    grid-area: middle;
 }
 
 #bottom {
@@ -42,7 +45,6 @@ body {
     flex-wrap: nowrap;
     width: 100%;
     margin-right: auto;
-    grid-area: bottom;
 }
 
 #characters {
@@ -66,19 +68,22 @@ body {
 }
 
 #characterPortrait {
-    display: flex;
+    /* display: flex; */
     padding-right: 10px;
     padding-left: 10px;
-    max-width: 760px;
+    height: 100%;
     justify-content: flex-start;
     align-self: start;
 }
 
 #equipment {
+    display: flex;
+    flex-direction: column;
     padding-right: 10px;
-    justify-self: flex-end;
-    grid-column: 5;
-    height: auto;
+    align-self: flex-end;
+    justify-content: flex-end;
+    margin-left: auto;
+    height: 100%;
 }
 
 #gems {
@@ -90,14 +95,21 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    margin-top: auto;
+}
+
+#info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-left: 10px;
+    padding-top: 10px;
 }
 
 #class {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    padding-left: 10px;
-    padding-top: 5px;
 }
 
 #classInfo {
@@ -105,6 +117,13 @@ body {
     flex-direction: column;
     justify-content: flex-start;
     padding-left: 10px;
+}
+
+#characterLevel {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 10px;
 }
 
 .icon {
@@ -129,19 +148,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: auto;
+    height: 100%;
+    width: auto;
 }
 
 .portrait img {
-    width: 100%;
-    height: auto;
-}
-
-.portrait {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 .gem {
@@ -152,9 +165,8 @@ body {
 }
 
 .gem img {
-    max-width: 30%;
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 .accessory {
@@ -165,8 +177,8 @@ body {
 }
 
 .accessory img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 .classIcon {
@@ -182,10 +194,6 @@ body {
     height: auto;
 }
 
-.className {
-    margin-top: 0%;
-}
-
-.rank {
+.infoText {
     margin-top: 0%;
 }
