--- a/style.css
+++ b/style.css
@@ -15,12 +15,7 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    /* grid-template-rows: [row1-start] 10vh [row1-end] auto [third-line] 30vh [last-line]; */
     height: 100vh;
-    /* grid-template-areas:
-    'top'
-    'middle'
-    'bottom'; */
 }
 
 #party {
@@ -68,12 +63,20 @@ body {
 }
 
 #characterPortrait {
-    /* display: flex; */
+    display: flex;
     padding-right: 10px;
     padding-left: 10px;
     height: 100%;
     justify-content: flex-start;
     align-self: start;
+}
+
+#stats {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #equipment {
@@ -152,12 +155,29 @@ body {
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 #masterArts {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: 170px;
+}
+
+#artContainerLeft {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+#artContainerRight {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 #classArts {
@@ -165,7 +185,6 @@ body {
     flex-direction: row;
     justify-content: flex-end;
     margin-left: auto;
-    padding-right: 10px;
     align-items: center;
 }
 
@@ -174,12 +193,14 @@ body {
     flex-direction: column;
     justify-content: flex-end;
     margin-left: auto;
+    width: 170px;
 }
 
 #talentArt {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .icon {
@@ -209,6 +230,16 @@ body {
 }
 
 .portrait img {
+    width: auto;
+    height: 100%;
+}
+
+.statIcon {
+    height: 50px;
+    width: auto;
+}
+
+.statIcon img {
     width: auto;
     height: 100%;
 }
@@ -252,6 +283,12 @@ body {
 
 .infoText {
     margin-top: 0%;
+}
+
+.artText {
+    margin: 0%;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .artSlot {
