--- a/style.css
+++ b/style.css
@@ -290,6 +290,47 @@ body {
     height: auto;
 }
 
+.classMenu {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.classMenuContent {
+    background-color: #c7c7c7;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    animation: dropdown 0.4s;
+}
+
+.classMenuHeader {
+    width: 100%;
+    background-color: rgb(255, 170, 0);
+}
+
+.close {
+    color: #000000;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .infoText {
     margin-top: 0%;
 }
@@ -330,4 +371,9 @@ body {
 .talentSlot img {
     width: 100%;
     height: auto;
+}
+
+@keyframes dropdown {
+    from {transform: translateY(-50px); opacity: 0;}
+    to {transform: translateY(0); opacity: 1;}
 }
