--- a/style.css
+++ b/style.css
@@ -352,6 +352,7 @@ body {
 
 .classMenuHeader {
     display: flex;
+    align-items: center;
     position: sticky;
     top: 0;
     justify-content: space-between;
@@ -373,6 +374,17 @@ body {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.heroMenu {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
 }
 
 .infoText {
