--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     font-size: 1em !important;
     color: white;
     background-image: url('img/bg.png');
+    transition: background-image 0.3s ease-in-out;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
