Added the full list of Master Skills. Added Master Skill menu and selection. Master Skills are saved to local storage

--- a/style.css
+++ b/style.css
@@ -409,6 +409,11 @@ body {
     height: auto;
     width: 100px;
     cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.modal-icon:hover {
+    background-color: #cc7f19;
 }
 
 .modal-icon img {
