--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ body {
 #gems {
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 #accessories {
@@ -337,15 +338,25 @@ body {
 
 .gem {
     display: flex;
-    align-items: center;
-    justify-content: right;
-    height: auto;
+    position: relative;
+    align-items: baseline;
+    height: 96px;
+    width: 96px;
 }
 
 .gem img {
     width: auto;
     height: 100%;
     cursor: pointer;
+}
+
+.gem-features {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .gemsMenu {
@@ -366,8 +377,8 @@ body {
     background-repeat: no-repeat;
     margin: 5% auto;
     border: 10px solid #2c2c2c;
-    width: 900px;
-    height: 70%;
+    width: 500px;
+    height: 65%;
     animation: dropdown 0.4s;
     display: flex;
     flex-direction: column;
@@ -375,11 +386,12 @@ body {
 
 .gem-list {
     display: grid;
-    grid-template-columns: [first] auto [line2] auto [line3] auto [line4] auto [line5] auto [line6] auto [line7] auto [line8] auto [line9] auto [line10] auto [line11] auto [end];
-    grid-template-rows: [row1-start] auto [row1-end] auto [third-line] auto [last-line];
+    grid-template-columns: [first] auto [line2] auto [line3] auto [line4] auto [end];
+    grid-template-rows: [row1-start] auto [row1-end] auto [third-line] auto [fourth-line] auto [fifth-line] auto [last-line];
     gap: 10px;
     justify-content: space-around;
     overflow-y: auto;
+    grid-auto-flow: column;
 }
 
 .accessory {
@@ -465,7 +477,12 @@ body {
 }
 
 .modal-icon-gem {
+    display: flex;
+    position: relative;
+    align-items: baseline;
+    height: 70px;
     width: 70px;
+    cursor: pointer;
 }
 
 .classMenuHeader {
