Added character, class, and weapon stat values. Added formula to caclulate and display a character's stats based on their class. Added outline for damage formula

--- a/style.css
+++ b/style.css
@@ -526,7 +526,7 @@ body {
     margin-top: 0%;
 }
 
-.info-text-2 {
+.stats-text {
     margin: 0%;
     padding-left: 10px;
     padding-right: 10px;
