--- a/style.css
+++ b/style.css
@@ -396,15 +396,57 @@ body {
 
 .accessory {
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: right;
-    height: auto;
+    width: 300px;
+    height: 64px;
     cursor: pointer;
 }
 
 .accessory img {
     width: auto;
     height: 100%;
+}
+
+.accessory-features {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.accessoriesMenu {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.accessoriesMenuContent {
+    background-image: url('img/bg-menu.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 5% auto;
+    border: 10px solid #2c2c2c;
+    width: 450px;
+    height: 75%;
+    animation: dropdown 0.4s;
+    display: flex;
+    flex-direction: column;
+}
+
+.accessory-list {
+    gap: 10px;
+    justify-content: space-around;
+    overflow-y: auto;
 }
 
 .classIcon {
@@ -485,6 +527,15 @@ body {
     cursor: pointer;
 }
 
+.modal-icon-accessory {
+    display: flex;
+    position: relative;
+    align-items: baseline;
+    height: 90px;
+    width: 426px;
+    cursor: pointer;
+}
+
 .classMenuHeader {
     display: flex;
     align-items: center;
@@ -530,6 +581,20 @@ body {
     margin: 0%;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.accessory-text {
+    margin: 0%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.accessory-text-2 {
+    font-size: 1em;
 }
 
 .info-text-3 {
