--- a/style.css
+++ b/style.css
@@ -136,7 +136,6 @@ body {
 #gems {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
 }
 
 #accessories {
@@ -334,6 +333,13 @@ body {
     width: auto;
     height: 100%;
     cursor: pointer;
+}
+
+.gemContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .gem {
