--- a/style.css
+++ b/style.css
@@ -388,7 +388,13 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+}
+
+.gem-features-shift {
+    left: 15px;
+    width: 70px;
+    cursor: pointer;
+    z-index: 5;
 }
 
 .gemsMenu {
@@ -425,6 +431,29 @@ body {
     overflow-y: auto;
     grid-auto-flow: column;
 }
+
+.icon-prev {
+    position: absolute;
+    color: #ffffff;
+    left: 0;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    &:before {
+      content: "\2039";
+    }
+  }
+  .icon-next {
+    position: absolute;
+    color: #ffffff;
+    right: 0;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    &:before {
+      content: "\203a";
+    }
+  }
 
 .accessory-container {
     display: flex;
@@ -556,11 +585,12 @@ body {
     width: 100px;
     cursor: pointer;
     border-radius: 15px;
+    background-color: #00000000;
     transition: background-color 0.2s;
 }
 
 .modal-icon:hover {
-    background-color:#cc7e19;
+    background-color: #cc7e19;
 }
 
 .modal-icon img {
@@ -571,10 +601,19 @@ body {
 .modal-icon-gem {
     display: flex;
     position: relative;
-    align-items: baseline;
+    align-items: center;
     height: 70px;
-    width: 70px;
-    cursor: pointer;
+    width: 100px;
+    cursor: context-menu;
+}
+
+.modal-icon-gem:hover {
+    background-color: #00000000;
+}
+
+.modal-icon-gem img {
+    width: auto;
+    height: 100%;
 }
 
 .modal-icon-accessory {
