--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ body {
 }
 
 .icon:hover {
-    background-color: #cc7f19;
+    background-color: #cc7e19c6;
 }
 
 .icon img {
@@ -395,6 +395,13 @@ body {
     width: 70px;
     cursor: pointer;
     z-index: 5;
+    border-radius: 15px;
+    background-color: #00000000;
+    transition: background-color 0.2s;
+}
+
+.gem-features-shift:hover {
+    background-color: #cc7e19c6;
 }
 
 .gemsMenu {
@@ -466,7 +473,7 @@ body {
     display: flex;
     position: relative;
     align-items: center;
-    justify-content: right;
+    justify-content: center;
     width: 300px;
     height: 64px;
     cursor: pointer;
@@ -488,12 +495,25 @@ body {
 }
 
 .accessory-features {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    width: 426px;
     height: 100%;
     object-fit: cover;
+}
+
+.accessory-features-menu {
+    cursor: pointer;
+    z-index: 5;
+    border-radius: 15px;
+    background-color: #00000000;
+    transition: background-color 0.2s;
+}
+
+.accessory-features-menu:hover {
+    background-color: #cc7e19c6;
 }
 
 .accessoriesMenu {
@@ -514,7 +534,7 @@ body {
     background-repeat: no-repeat;
     margin: 5% auto;
     border: 10px solid #2c2c2c;
-    width: 450px;
+    width: 500px;
     height: 75%;
     animation: dropdown 0.4s;
     display: flex;
@@ -590,7 +610,7 @@ body {
 }
 
 .modal-icon:hover {
-    background-color: #cc7e19;
+    background-color: #cc7e19c6;
 }
 
 .modal-icon img {
@@ -619,10 +639,22 @@ body {
 .modal-icon-accessory {
     display: flex;
     position: relative;
-    align-items: baseline;
+    align-items: center;
+    justify-content: center;
     height: 90px;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: context-menu;
+}
+
+.modal-icon-accessory:hover {
+    background-color: #00000000;
+}
+
+.modal-icon-accessory img {
     width: 426px;
-    cursor: pointer;
+    height: auto;
 }
 
 .classMenuHeader {
@@ -675,15 +707,17 @@ body {
 .accessory-text {
     margin: 0%;
     position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
 }
 
 .accessory-text-2 {
     font-size: 1em;
+    text-align: center;
+    white-space: nowrap; 
+    width: 150px; 
+    overflow: hidden;
+    text-overflow: ellipsis; 
 }
 
 .info-text-3 {
