--- a/style.css
+++ b/style.css
@@ -125,6 +125,20 @@ body {
     border-radius: 6px;
 }
 
+#damageNumbers {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 300px;
+    max-height: 480px;
+    height: 100%;
+    margin-left: 10px;
+    margin-right: 10px;
+    overflow-y: auto;
+    background-color: rgba(0,0,0,0.4);
+    border-radius: 6px;
+}
+
 #equipment {
     display: flex;
     flex-direction: column;
@@ -729,6 +743,11 @@ body {
     margin: 0%;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.damage-text {
+    margin: 0%;
+    padding: 10px;
 }
 
 .unlimited-sword-text {
