--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 300px;
+    width: 200px;
     max-height: 480px;
     height: 100%;
     overflow-y: auto;
@@ -129,7 +129,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 400px;
+    width: 500px;
     max-height: 480px;
     height: 100%;
     margin-left: 10px;
@@ -814,8 +814,8 @@ body {
     position: relative;
     align-items: baseline;
     justify-content: left;
-    height: 50px;
-    width: 50px;
+    min-height: 50px;
+    min-width: 50px;
     cursor: pointer;
 }
 
