--- a/style.css
+++ b/style.css
@@ -884,6 +884,15 @@ body {
     height: auto;
 }
 
+.accordion-button-custom {
+    border-radius: 15px;
+}
+
+.width-limiter {
+    width: 100%;
+    padding: 0;
+}
+
 @keyframes dropdown {
     from {transform: translateY(-50px); opacity: 0;}
     to {transform: translateY(0); opacity: 1;}
