--- a/style.css
+++ b/style.css
@@ -654,7 +654,7 @@ body {
     background-repeat: no-repeat;
     margin: 5% auto;
     border: 10px solid #2c2c2c;
-    width: 500px;
+    width: 550px;
     height: 70%;
     animation: dropdown 0.4s;
     display: flex;
@@ -671,15 +671,15 @@ body {
 }
 
 .modal-icon {
-    height: auto;
-    width: 100px;
+    height: 100%;
+    width: auto;
     cursor: pointer;
     border-radius: 15px;
 }
 
 .modal-icon img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 .modal-icon-gem {
