--- a/style.css
+++ b/style.css
@@ -806,6 +806,12 @@ body {
     padding-left: 10px;
 }
 
+.calc-button {
+    margin: 10px;
+    font-size: x-large;
+    cursor: pointer;
+}
+
 .damage-text {
     margin: 0%;
     padding: 10px;
