--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif !important;
@@ -10,7 +12,6 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    overflow: hidden;
 
     h1 {
         font-size: 1.17em;
@@ -41,6 +42,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    width: 100vw;
 }
 
 #party {
@@ -478,7 +480,7 @@ body {
 .gemsMenu {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
@@ -590,7 +592,7 @@ body {
 .accessoriesMenu {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
@@ -640,7 +642,7 @@ body {
 .classMenu {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
@@ -751,7 +753,7 @@ body {
 .heroMenu {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
@@ -938,5 +940,54 @@ body {
     }
     100% {
         text-shadow: 0px 0px 0px #ffffff00;
+    }
+}
+
+@media (max-width: 1130px) {
+    body {
+        overflow: visible;
+    }
+    #party {
+        flex-direction: column;
+        gap: 5px;
+        position: fixed;
+        top: 0px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        z-index: 1;
+        border-bottom-right-radius: 15px;
+        border-bottom-left-radius: 15px;
+        background-color: #2d2d2d;
+        background-image: linear-gradient(#2d2d2df0 0%, #2d2d2dfe 20%, #2d2d2dfe 80%, #2d2d2df0 100%), url('img/checker.png');
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin: 0;
+        padding-top: 20px;
+        padding-bottom: 20px;
+    }
+    #characters {
+        order: 1;
+    }
+    #ouroboros {
+        box-sizing: border-box;
+        max-width: 760px;
+        padding-left: 55px;
+        padding-right: 55px;
+        order: 2;
+    }
+    #fr-toggle {
+        display: flex;
+        order: 3;
+    }
+    #center {
+        position: relative;
+        top: 180px;
+    }
+    #bottom {
+        position: relative;
+        top: 180px;
     }
 }
