--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+html, body {
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -24,16 +24,16 @@ body {
     }
 
     *::-webkit-scrollbar-track {
-        background: #ffffff00; 
+        background: #ffffff00;
     }
 
     *::-webkit-scrollbar-thumb {
-        background: #888; 
+        background: #888;
         border-radius: 6px;
     }
 
     *::-webkit-scrollbar-thumb:hover {
-        background: #555; 
+        background: #555;
     }
 }
 
@@ -480,7 +480,7 @@ body {
 .gemsMenu {
     display: none;
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     left: 0;
     top: 0;
     width: 100%;
@@ -592,7 +592,7 @@ body {
 .accessoriesMenu {
     display: none;
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     left: 0;
     top: 0;
     width: 100%;
@@ -642,7 +642,7 @@ body {
 .classMenu {
     display: none;
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     left: 0;
     top: 0;
     width: 100%;
@@ -753,7 +753,7 @@ body {
 .heroMenu {
     display: none;
     position: fixed;
-    z-index: 3;
+    z-index: 4;
     left: 0;
     top: 0;
     width: 100%;
@@ -886,8 +886,8 @@ body {
     position: relative;
     align-items: baseline;
     justify-content: left;
-    height: 70px;
-    width: 70px;
+    min-height: 70px;
+    min-width: 70px;
     cursor: pointer;
 }
 
@@ -944,9 +944,16 @@ body {
 }
 
 @media (max-width: 1130px) {
-    body {
-        overflow: visible;
+    html, body {
+        max-height: 100%;
+        max-width: 100%;
+        box-sizing: border-box;
     }
+
+    #statCalculator {
+        width: 100%;
+    }
+
     #party {
         flex-direction: column;
         gap: 5px;
@@ -955,39 +962,128 @@ body {
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
-        z-index: 1;
+        z-index: 3;
         border-bottom-right-radius: 15px;
         border-bottom-left-radius: 15px;
         background-color: #2d2d2d;
         background-image: linear-gradient(#2d2d2df0 0%, #2d2d2dfe 20%, #2d2d2dfe 80%, #2d2d2df0 100%), url('img/checker.png');
         background-size: cover;
         background-attachment: fixed;
-        background-position: center;
         background-repeat: no-repeat;
         margin: 0;
         padding-top: 20px;
         padding-bottom: 20px;
     }
+    
     #characters {
+        height: 37px;
         order: 1;
     }
+
     #ouroboros {
         box-sizing: border-box;
+        height: 37px;
         max-width: 760px;
         padding-left: 55px;
         padding-right: 55px;
         order: 2;
     }
+
     #fr-toggle {
         display: flex;
         order: 3;
     }
+
     #center {
+        display: grid;
+        grid-template-areas:
+            "row1 row1"
+            "row2 row2";
+        gap: 10px;
         position: relative;
         top: 180px;
+        width: 100%;
+        box-sizing: border-box;
     }
+
     #bottom {
+        display: grid;
+        grid-template-areas:
+            ". ."
+            "row2 row2";
+        grid-template-columns: auto 50%;
+        gap: 10px;
         position: relative;
         top: 180px;
+        padding-bottom: 10px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    #characterPortrait {
+        display: none;
+    }
+
+    #stats {
+        flex-direction: row;
+        grid-area: row1;
+        box-sizing: border-box;
+        width: 100%;
+    }
+
+    #damageNumbers {
+        width: auto;
+    }
+
+    #statuses {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        width: calc(100% - 20px);
+        margin-left: 10px;
+        margin-right: 10px;
+        box-sizing: border-box;
+        border-radius: 15px;
+        grid-area: row2;
+    }
+
+    #level-select {
+        grid-row: 5;
+        grid-column: 2;
+    }
+
+    .statIcon {
+        max-width: 50px;
+        height: auto;
+    }
+    
+    .statIcon img {
+        width: 100%;
+        height: auto;
+    }
+
+    #arts {
+        grid-area: row2;
+    }
+
+    #skills {
+        align-items: flex-end;
+        padding-right: 10px;
+    }
+
+    #masterSkills {
+        padding-right: 64px;
+        box-sizing: border-box;
+    }
+
+    .classMenuContent {
+        max-height: 700px
+    }
+
+    .gemsMenuContent {
+        max-height: 500px
+    }
+
+    .accessoriesMenuContent {
+        max-height: 700px
     }
 }
