--- a/style.css
+++ b/style.css
@@ -453,6 +453,10 @@ html, body {
     cursor: pointer;
 }
 
+.gem-description {
+    display: none;
+}
+
 .gem img {
     width: auto;
     height: 100%;
@@ -1110,14 +1114,16 @@ html, body {
     }
 
     .gemContainer {
-        flex-direction: column-reverse;
+        flex-direction: column;
+        justify-content: flex-start;
         position: relative;
-        width: 150px;
+        width: 200px;
     }
 
     .gem {
-        width: 100%;
-        height: 100%;
+        width: 150px;
+        height: 150px;
+        order: 1;
     }
 
     .gem::after {
@@ -1140,6 +1146,13 @@ html, body {
 
     .gem-text {
         text-align: center;
+        order: 2;
+    }
+
+    .gem-description {
+        display: block;
+        text-align: center;
+        order: 3;
     }
 
     .accessory-container {
@@ -1168,6 +1181,11 @@ html, body {
         margin: 0;
         top: -8px;
         right: -5px;
+    }
+
+    .accessory-text-2 {
+        font-size: 2em;
+        width: 300px;
     }
 
     .classMenuContent {
